--- a/arxiv.sty
+++ b/arxiv.sty
@@ -241,6 +241,16 @@
   \end@float%
 }
 
+% Better spacing
+\usepackage{float}
+\let\origfigure\figure
+\let\endorigfigure\endfigure
+\renewenvironment{figure}[1][2] {
+    \expandafter\origfigure\expandafter[H]
+} {
+    \endorigfigure
+}
+
 % abstract styling
 \renewenvironment{abstract}
 {
