--- a/references.bib
+++ b/references.bib
@@ -243,3 +243,63 @@
 
 
 
+
+
+@article{li2018,
+  title = {Minimap2: Pairwise Alignment for Nucleotide Sequences},
+  shorttitle = {Minimap2},
+  author = {Li, Heng},
+  editor = {Birol, Inanc},
+  year = {2018},
+  month = sep,
+  journal = {Bioinformatics},
+  volume = {34},
+  number = {18},
+  pages = {3094--3100},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/bty191},
+  langid = {english},
+  file = {/Users/turner/Zotero/storage/RSBB55X9/Li - 2018 - Minimap2 pairwise alignment for nucleotide sequen.pdf}
+}
+
+
+
+
+
+@article{quinlan2010,
+  title = {{{BEDTools}}: A Flexible Suite of Utilities for Comparing Genomic Features},
+  shorttitle = {{{BEDTools}}},
+  author = {Quinlan, Aaron R. and Hall, Ira M.},
+  year = {2010},
+  month = mar,
+  journal = {Bioinformatics},
+  volume = {26},
+  number = {6},
+  pages = {841--842},
+  issn = {1460-2059, 1367-4803},
+  doi = {10.1093/bioinformatics/btq033},
+  langid = {english},
+  file = {/Users/turner/Zotero/storage/3QZLPHVR/Quinlan and Hall - 2010 - BEDTools a flexible suite of utilities for compar.pdf}
+}
+
+
+
+
+
+@article{love2014,
+  title = {Moderated Estimation of Fold Change and Dispersion for {{RNA-seq}} Data with {{DESeq2}}},
+  author = {Love, Michael I and Huber, Wolfgang and Anders, Simon},
+  year = {2014},
+  month = dec,
+  journal = {Genome Biology},
+  volume = {15},
+  number = {12},
+  pages = {550},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-014-0550-8},
+  langid = {english},
+  file = {/Users/turner/Zotero/storage/ZE7BK4LS/Love et al. - 2014 - Moderated estimation of fold change and dispersion.pdf}
+}
+
+
+
